--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -6,8 +6,8 @@ description:
   This package provides functionality for generalizing the deriving mechanism
   in Haskell to arbitrary classes. It is described in the paper:
   .
-  *  /A generic deriving mechanism for Haskell/
-     José Pedro Magalhães, Atze Dijkstra, Johan Jeuring, and Andres Löh.
+  *  /A generic deriving mechanism for Haskell/.
+     Jose Pedro Magalhaes, Atze Dijkstra, Johan Jeuring, and Andres Loeh.
      Haskell'10.
 
 category:               Generics
