--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -37,6 +37,6 @@ library
                         Generics.Deriving.Uniplate
                         Generics.Deriving.TH
                         
-  build-depends:        base <= 4.2.0.0, template-haskell == 2.4.*
+  build-depends:        base <= 4.2.0.0, template-haskell >=2.4 && <2.5
   extensions:           MultiParamTypeClasses, CPP
   ghc-options:          -Wall
