--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -21,7 +21,7 @@ license-file:           LICENSE
 author:                 José Pedro Magalhães
 maintainer:             generics@haskell.org
 stability:              experimental
-build-type:             Custom
+build-type:             Simple
 cabal-version:          >= 1.6
 tested-with:            GHC == 7.0.3, GHC == 7.2.1, GHC == 7.4.1
 extra-source-files:     examples/Examples.hs
