--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -1,5 +1,5 @@
 name:                   generic-deriving
-version:                1.4.0
+version:                1.5.0
 synopsis:               Generic programming library for generalised deriving.
 description:
 
@@ -15,7 +15,7 @@ description:
   Template Haskell code is provided for supporting GHC before version 7.2.
 
 category:               Generics
-copyright:              2011-2012 Universiteit Utrecht, University of Oxford
+copyright:              2011-2013 Universiteit Utrecht, University of Oxford
 license:                BSD3
 license-file:           LICENSE
 author:                 José Pedro Magalhães
@@ -23,7 +23,7 @@ maintainer:             generics@haskell.org
 stability:              experimental
 build-type:             Simple
 cabal-version:          >= 1.6
-tested-with:            GHC == 7.0.3, GHC == 7.2.1, GHC == 7.4.1, GHC == 7.6.1, GHC == 7.7.20130117
+tested-with:            GHC == 7.0.3, GHC == 7.2.1, GHC == 7.4.1, GHC == 7.6.1
 extra-source-files:     examples/Examples.hs
 
 source-repository head
