--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -23,7 +23,7 @@ maintainer:             generics@haskell.org
 stability:              experimental
 build-type:             Simple
 cabal-version:          >= 1.6
-tested-with:            GHC == 7.0.3, GHC == 7.2.1, GHC == 7.4.1, GHC == 7.6.1
+tested-with:            GHC == 7.0.3, GHC == 7.2.1, GHC == 7.4.1, GHC == 7.6.1, GHC == 7.7.20130624
 extra-source-files:     examples/Examples.hs
 
 source-repository head
