Implement `Generics.Deriving.Comonad`.
Several `GComonad'` instance needs access to `GFunctor'` member functions. To expose those functions, I moved Generics.Deriving.Functor to an internal module that exposes the implementation class, and created a thin wrapper that only exports the public API.

--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -35,12 +35,14 @@ library
   exposed-modules:      Generics.Deriving
                         Generics.Deriving.Base
                         Generics.Deriving.Instances
+                        Generics.Deriving.Comonad
                         Generics.Deriving.Copoint
                         Generics.Deriving.ConNames
                         Generics.Deriving.Enum
                         Generics.Deriving.Eq
                         Generics.Deriving.Foldable
                         Generics.Deriving.Functor
+                        Generics.Deriving.Internal.Functor
                         Generics.Deriving.Monoid
                         Generics.Deriving.Show
                         Generics.Deriving.Traversable
