--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -48,7 +48,7 @@ library
 
                         Generics.Deriving.TH
                         
-  build-depends:        base < 5, template-haskell >=2.4 && <2.11
+  build-depends:        base < 5, base-orphans >=0.3, template-haskell >=2.4 && <2.11
   if impl(ghc > 7.0)
     build-depends:      ghc-prim < 1
 
