--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,33 @@
-language: haskell
+# NB: don't set `language: haskell` here
+
+env:
+ - CABALVER=1.18 GHCVER=7.0.4
+ - CABALVER=1.18 GHCVER=7.2.2
+ - CABALVER=1.18 GHCVER=7.4.2
+ - CABALVER=1.18 GHCVER=7.6.3
+ - CABALVER=1.18 GHCVER=7.8.4
+ - CABALVER=1.22 GHCVER=7.10.2
+ - CABALVER=head GHCVER=head
+
+matrix:
+  allow_failures:
+   - env: CABALVER=head GHCVER=head
+
+before_install:
+ - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
+ - travis_retry sudo apt-get update
+ - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
+ - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
+
+install:
+ - cabal --version
+ - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
+ - travis_retry cabal update
+ - cabal install -j --only-dependencies
+
+script:
+ - if [ -f configure.ac ]; then autoreconf -i; fi
+ - cabal configure --enable-tests -v2
+ - cabal build -j1 --ghc-option=-Werror
+ - cabal check
+ - cabal sdist
