--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -14,6 +14,8 @@ description:
   <http://www.haskell.org/haskellwiki/GHC.Generics> for more information.
   Template Haskell code is provided for supporting GHC before version 7.2.
 
+homepage:               https://github.com/dreixel/generic-deriving
+bug-reports:            https://github.com/dreixel/generic-deriving/issues
 category:               Generics
 copyright:              2011-2013 Universiteit Utrecht, University of Oxford
 license:                BSD3
@@ -23,7 +25,12 @@ maintainer:             generics@haskell.org
 stability:              experimental
 build-type:             Simple
 cabal-version:          >= 1.6
-tested-with:            GHC == 7.0.3, GHC == 7.2.1, GHC == 7.4.1, GHC == 7.6.1, GHC == 7.7.20130624
+tested-with:            GHC == 7.0.4
+                      , GHC == 7.2.2
+                      , GHC == 7.4.2
+                      , GHC == 7.6.3
+                      , GHC == 7.8.4
+                      , GHC == 7.10.2
 extra-source-files:     examples/Examples.hs, README.md
 
 source-repository head
