--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -31,7 +31,7 @@ tested-with:            GHC == 7.0.4
                       , GHC == 7.6.3
                       , GHC == 7.8.4
                       , GHC == 7.10.2
-extra-source-files:     examples/Examples.hs, README.md
+extra-source-files:     examples/Examples.hs, CHANGELOG.md, README.md
 
 source-repository head
   type: git
