--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -1,5 +1,5 @@
 name:                   generic-deriving
-version:                1.8.0
+version:                1.9.0
 synopsis:               Generic programming library for generalised deriving.
 description:
 
@@ -31,7 +31,9 @@ tested-with:            GHC == 7.0.4
                       , GHC == 7.6.3
                       , GHC == 7.8.4
                       , GHC == 7.10.2
-extra-source-files:     examples/Examples.hs, CHANGELOG.md, README.md
+extra-source-files:     examples/Examples.hs
+                      , CHANGELOG.md
+                      , README.md
 
 source-repository head
   type: git
@@ -58,7 +60,9 @@ library
   other-modules:        Generics.Deriving.TH.Internal
                         Paths_generic_deriving
 
-  build-depends:        base < 5, containers >= 0.1 && < 0.6, template-haskell >=2.4 && <2.12
+  build-depends:        base < 5
+                      , containers       >= 0.1 && < 0.6
+                      , template-haskell >= 2.4 && < 2.12
   if impl(ghc > 7.0)
     build-depends:      ghc-prim < 1
 
