Generics.Deriving.Semigroup
Fixes #33.

--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -52,6 +52,7 @@ library
                         Generics.Deriving.Foldable
                         Generics.Deriving.Functor
                         Generics.Deriving.Monoid
+                        Generics.Deriving.Semigroup
                         Generics.Deriving.Show
                         Generics.Deriving.Traversable
                         Generics.Deriving.Uniplate
