--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -73,4 +73,13 @@ library
   if impl(ghc > 7.0)
     build-depends:      ghc-prim < 1
 
+  if impl(ghc == 7.8)
+    build-depends:      template-haskell == 2.9
+
+  if impl(ghc == 7.10)
+    build-depends:      template-haskell == 2.10
+
+  if impl(ghc == 8.0)
+    build-depends:      template-haskell == 2.11
+
   ghc-options:          -Wall
