--- a/.travis.yml
+++ b/.travis.yml
@@ -87,6 +87,7 @@ script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
  - cabal configure --enable-tests --enable-benchmarks -v2  # -v2 provides useful information for debugging
  - cabal build -j1 --ghc-option=-Werror # this builds all libraries and executables (including tests/benchmarks)
+ - cabal test -j1 --show-details=always
  - cabal haddock
  - cabal check
  - cabal sdist   # tests that a source-distribution can be generated
