--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -24,7 +24,7 @@ author:                 José Pedro Magalhães
 maintainer:             generics@haskell.org
 stability:              experimental
 build-type:             Simple
-cabal-version:          >= 1.6
+cabal-version:          >= 1.10
 tested-with:            GHC == 7.0.4
                       , GHC == 7.2.2
                       , GHC == 7.4.2
@@ -32,8 +32,7 @@ tested-with:            GHC == 7.0.4
                       , GHC == 7.8.4
                       , GHC == 7.10.3
                       , GHC == 8.0.1
-extra-source-files:     examples/Examples.hs
-                      , CHANGELOG.md
+extra-source-files:     CHANGELOG.md
                       , README.md
 
 source-repository head
@@ -78,4 +77,16 @@ library
                       , ghc-prim                   < 1
                       , template-haskell >= 2.4 && < 2.12
 
+  default-language:     Haskell2010
   ghc-options:          -Wall
+
+test-suite spec
+  type:                 exitcode-stdio-1.0
+  main-is:              Spec.hs
+  other-modules:        ExampleSpec
+  build-depends:        base             >= 4.3  && < 5
+                      , generic-deriving == 1.11
+                      , hspec            >= 2    && < 3
+  hs-source-dirs:       tests
+  default-language:     Haskell2010
+  ghc-options:          -Wall -threaded -rtsopts
