--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -87,6 +87,7 @@ test-suite spec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving == 1.11
                       , hspec            >= 2    && < 3
+                      , template-haskell >= 2.4  && < 2.12
   hs-source-dirs:       tests
   default-language:     Haskell2010
   ghc-options:          -Wall -threaded -rtsopts
