--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -86,7 +86,7 @@ test-suite spec
   other-modules:        ExampleSpec
                         TypeInTypeSpec
   build-depends:        base             >= 4.3  && < 5
-                      , generic-deriving == 1.11.1
+                      , generic-deriving
                       , hspec            >= 2    && < 3
                       , template-haskell >= 2.4  && < 2.12
   hs-source-dirs:       tests
