--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -32,6 +32,7 @@ tested-with:            GHC == 7.0.4
                       , GHC == 7.8.4
                       , GHC == 7.10.3
                       , GHC == 8.0.2
+                      , GHC == 8.2.1
 extra-source-files:     CHANGELOG.md
                       , README.md
 
@@ -88,7 +89,7 @@ test-suite spec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving
                       , hspec            >= 2    && < 3
-                      , template-haskell >= 2.4  && < 2.12
+                      , template-haskell >= 2.4  && < 2.13
   hs-source-dirs:       tests
   default-language:     Haskell2010
   ghc-options:          -Wall -threaded -rtsopts
