Add EmptyCaseOptions to Generics.Deriving.TH

--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -84,7 +84,8 @@ library
 test-suite spec
   type:                 exitcode-stdio-1.0
   main-is:              Spec.hs
-  other-modules:        ExampleSpec
+  other-modules:        EmptyCaseSpec
+                        ExampleSpec
                         TypeInTypeSpec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving
