--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -33,6 +33,7 @@ tested-with:            GHC == 7.0.4
                       , GHC == 7.10.3
                       , GHC == 8.0.2
                       , GHC == 8.2.2
+                      , GHC == 8.4.1
 extra-source-files:     CHANGELOG.md
                       , README.md
 
@@ -91,6 +92,7 @@ test-suite spec
                       , generic-deriving
                       , hspec            >= 2    && < 3
                       , template-haskell >= 2.4  && < 2.13
+  build-tool-depends:   hspec-discover:hspec-discover
   hs-source-dirs:       tests
   default-language:     Haskell2010
   ghc-options:          -Wall -threaded -rtsopts
