Refactor internals using th-abstraction

--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -75,9 +75,10 @@ library
     build-depends:      base >= 4.3 && < 4.9
     other-modules:      Generics.Deriving.TH.Pre4_9
 
-  build-depends:        containers       >= 0.1 && < 0.6
-                      , ghc-prim                   < 1
-                      , template-haskell >= 2.4 && < 2.14
+  build-depends:        containers       >= 0.1   && < 0.6
+                      , ghc-prim                     < 1
+                      , template-haskell >= 2.4   && < 2.14
+                      , th-abstraction   >= 0.2.7 && < 0.3
 
   default-language:     Haskell2010
   ghc-options:          -Wall
