--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -88,11 +88,10 @@ library
 test-suite spec
   type:                 exitcode-stdio-1.0
   main-is:              Spec.hs
-  other-modules:        EmptyCaseSpec
+  other-modules:        DefaultSpec
+                        EmptyCaseSpec
                         ExampleSpec
                         TypeInTypeSpec
-  if impl(ghc >= 8.6.1)
-    other-modules:      DefaultSpec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving
                       , hspec            >= 2    && < 3
