Introduce examples using DerivingVia (#59)
* Add Default module

* Add already tested instances

* Add description

* Begin test suite for Default

* Add semigroup instance

* Add monoid, accounting for semigroup dependency

* Fix haddock module info strings

* Add uniplate instances

* Add Functor instance

* Add GCopoint

* Default1 Foldable

* Add InstanceSigs to all Default instances

* Default1 for Traversable

* Fix a few mistakes

* Add data types for tests

* Suppress warnings in test module, for CI

* Implement suggested changes to test suite

* Remove InstanceSigs

* Extend description

* Convert out-of-package instances to documentation

* Flesh out test suite

* Fix build failures for GHC < 7.10

- Import <$> from Control.Applivative
- Choose `liftM` over `fmap` or `<$>` for `Uniplate` (AMP)

* Improve docs for Default module instances

* Complete documentation of Default module

* Clarify Generic/Generic1 (fixing erroneous example)

* Correct haddock output

* Update changelog

--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -54,6 +54,7 @@ library
                         Generics.Deriving.Instances
                         Generics.Deriving.Copoint
                         Generics.Deriving.ConNames
+                        Generics.Deriving.Default
                         Generics.Deriving.Enum
                         Generics.Deriving.Eq
                         Generics.Deriving.Foldable
@@ -87,7 +88,8 @@ library
 test-suite spec
   type:                 exitcode-stdio-1.0
   main-is:              Spec.hs
-  other-modules:        EmptyCaseSpec
+  other-modules:        DefaultSpec
+                        EmptyCaseSpec
                         ExampleSpec
                         TypeInTypeSpec
   build-depends:        base             >= 4.3  && < 5
