--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -69,6 +69,7 @@ library
                         Generics.Deriving.TH
 
   other-modules:        Generics.Deriving.Base.Internal
+                        Generics.Deriving.Monoid.Internal
                         Generics.Deriving.TH.Internal
                         Paths_generic_deriving
   if flag(base-4-9)
