Generalize (GMonoid (Maybe a)) to require only (GSemigroup a) (#63)
* Generalize (GMonoid (Maybe a)) to require only (GSemigroup a)

* Move the meat of G.D.Monoid to G.D.Monoid.Internal

* Mark G.D.Monoid Safe again

* Fix Safe/Trustworthy pragma for G.D.Monoid

* Bump version to 1.13

* Amend changelog

--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -1,5 +1,5 @@
 name:                   generic-deriving
-version:                1.12.4
+version:                1.13
 synopsis:               Generic programming library for generalised deriving.
 description:
 
@@ -69,6 +69,7 @@ library
                         Generics.Deriving.TH
 
   other-modules:        Generics.Deriving.Base.Internal
+                        Generics.Deriving.Monoid.Internal
                         Generics.Deriving.TH.Internal
                         Paths_generic_deriving
   if flag(base-4-9)
