Make GSemigroup a superclass of GMonoid
This involved a little more module reorganization, but nothing too bad.
Fixes #64.

--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -70,6 +70,7 @@ library
 
   other-modules:        Generics.Deriving.Base.Internal
                         Generics.Deriving.Monoid.Internal
+                        Generics.Deriving.Semigroup.Internal
                         Generics.Deriving.TH.Internal
                         Paths_generic_deriving
   if flag(base-4-9)
