--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -36,6 +36,7 @@ tested-with:            GHC == 7.0.4
                       , GHC == 8.4.4
                       , GHC == 8.6.5
                       , GHC == 8.8.1
+                      , GHC == 8.10.1
 extra-source-files:     CHANGELOG.md
                       , README.md
 
@@ -82,7 +83,7 @@ library
 
   build-depends:        containers       >= 0.1   && < 0.7
                       , ghc-prim                     < 1
-                      , template-haskell >= 2.4   && < 2.16
+                      , template-haskell >= 2.4   && < 2.17
                       , th-abstraction   >= 0.3   && < 0.4
 
   default-language:     Haskell2010
@@ -98,7 +99,7 @@ test-suite spec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving
                       , hspec            >= 2    && < 3
-                      , template-haskell >= 2.4  && < 2.16
+                      , template-haskell >= 2.4  && < 2.17
   build-tool-depends:   hspec-discover:hspec-discover
   hs-source-dirs:       tests
   default-language:     Haskell2010
