--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -105,3 +105,5 @@ test-suite spec
   hs-source-dirs:       tests
   default-language:     Haskell2010
   ghc-options:          -Wall -threaded -rtsopts
+  if impl(ghc >= 8.6)
+    ghc-options:        -Wno-star-is-type
