--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -1,5 +1,5 @@
 name:                   generic-deriving
-version:                1.13.1
+version:                1.14
 synopsis:               Generic programming library for generalised deriving.
 description:
 
@@ -83,8 +83,8 @@ library
 
   build-depends:        containers       >= 0.1   && < 0.7
                       , ghc-prim                     < 1
-                      , template-haskell >= 2.4   && < 2.17
-                      , th-abstraction   >= 0.3   && < 0.4
+                      , template-haskell >= 2.4   && < 2.18
+                      , th-abstraction   >= 0.4   && < 0.5
 
   default-language:     Haskell2010
   ghc-options:          -Wall
@@ -100,8 +100,10 @@ test-suite spec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving
                       , hspec            >= 2    && < 3
-                      , template-haskell >= 2.4  && < 2.17
+                      , template-haskell >= 2.4  && < 2.18
   build-tool-depends:   hspec-discover:hspec-discover
   hs-source-dirs:       tests
   default-language:     Haskell2010
   ghc-options:          -Wall -threaded -rtsopts
+  if impl(ghc >= 8.6)
+    ghc-options:        -Wno-star-is-type
