--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -36,7 +36,7 @@ description:
     "Generics.Deriving.Monoid", "Generics.Deriving.Semigroup",
     "Generics.Deriving.Show", "Generics.Deriving.Traversable",
     and "Generics.Deriving.Uniplate".
-    .    
+    .
     It is worth emphasizing that these modules are primarly intended for
     educational purposes. Many of the classes in these modules resemble other
     commonly used classes—for example, @GShow@ from "Generics.Deriving.Show"
@@ -81,6 +81,7 @@ tested-with:            GHC == 7.0.4
                       , GHC == 8.6.5
                       , GHC == 8.8.3
                       , GHC == 8.10.1
+                      , GHC == 9.0.1
 extra-source-files:     CHANGELOG.md
                       , README.md
 
