--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -143,6 +143,7 @@ test-suite spec
                         ExampleSpec
                         T68Spec
                         T80Spec
+                        T82Spec
                         TypeInTypeSpec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving
