--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -131,8 +131,11 @@ library
 
   build-depends:        containers       >= 0.1   && < 0.7
                       , ghc-prim                     < 1
-                      , template-haskell >= 2.4   && < 2.21
-                      , th-abstraction   >= 0.4   && < 0.6
+                      , template-haskell >= 2.4   && < 2.22
+                        -- TODO: Eventually, we should bump the lower version
+                        -- bounds to >=0.6 so that we can remove some CPP in
+                        -- Generics.Deriving.TH.Internal.
+                      , th-abstraction   >= 0.4   && < 0.7
 
   default-language:     Haskell2010
   ghc-options:          -Wall
@@ -150,7 +153,7 @@ test-suite spec
   build-depends:        base             >= 4.3  && < 5
                       , generic-deriving
                       , hspec            >= 2    && < 3
-                      , template-haskell >= 2.4  && < 2.21
+                      , template-haskell >= 2.4  && < 2.22
   build-tool-depends:   hspec-discover:hspec-discover
   hs-source-dirs:       tests
   default-language:     Haskell2010
