--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -83,8 +83,10 @@ tested-with:            GHC == 7.0.4
                       , GHC == 8.10.7
                       , GHC == 9.0.2
                       , GHC == 9.2.8
-                      , GHC == 9.4.5
-                      , GHC == 9.6.2
+                      , GHC == 9.4.8
+                      , GHC == 9.6.4
+                      , GHC == 9.8.2
+                      , GHC == 9.10.0
 extra-source-files:     CHANGELOG.md
                       , README.md
 
@@ -131,7 +133,7 @@ library
 
   build-depends:        containers       >= 0.1   && < 0.8
                       , ghc-prim                     < 1
-                      , template-haskell >= 2.4   && < 2.22
+                      , template-haskell >= 2.4   && < 2.23
                         -- TODO: Eventually, we should bump the lower version
                         -- bounds to >=0.6 so that we can remove some CPP in
                         -- Generics.Deriving.TH.Internal.
@@ -150,10 +152,10 @@ test-suite spec
                         T80Spec
                         T82Spec
                         TypeInTypeSpec
-  build-depends:        base             >= 4.3  && < 5
+  build-depends:        base
                       , generic-deriving
                       , hspec            >= 2    && < 3
-                      , template-haskell >= 2.4  && < 2.22
+                      , template-haskell
   build-tool-depends:   hspec-discover:hspec-discover
   hs-source-dirs:       tests
   default-language:     Haskell2010
