--- a/generic-deriving.cabal
+++ b/generic-deriving.cabal
@@ -69,13 +69,8 @@ maintainer:             generics@haskell.org
 stability:              experimental
 build-type:             Simple
 cabal-version:          >= 1.10
-tested-with:            GHC == 7.0.4
-                      , GHC == 7.2.2
-                      , GHC == 7.4.2
-                      , GHC == 7.6.3
-                      , GHC == 7.8.4
-                      , GHC == 7.10.3
-                      , GHC == 8.0.2
+tested-with:
+                        GHC == 8.0.2
                       , GHC == 8.2.2
                       , GHC == 8.4.4
                       , GHC == 8.6.5
@@ -84,9 +79,10 @@ tested-with:            GHC == 7.0.4
                       , GHC == 9.0.2
                       , GHC == 9.2.8
                       , GHC == 9.4.8
-                      , GHC == 9.6.4
+                      , GHC == 9.6.6
                       , GHC == 9.8.2
-                      , GHC == 9.10.0
+                      , GHC == 9.10.1
+
 extra-source-files:     CHANGELOG.md
                       , README.md
 
